--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -25,6 +25,8 @@ eureka.instance.hostname=localhost
 
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri= http://localhost:8080/realms/demo/protocol/openid-connect/certs
 
+spring.config.import=optional:configserver:http://root:s3cr3t@localhost:8888
+
 
 
 
