--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=config-server
+
+server.port=8888
+spring.cloud.config.server.git.uri=https://github.com/ptr2rtp/spring-cloud
+spring.cloud.config.server.git.clone-on-start=true
+spring.security.user.name=root
+spring.security.user.password=s3cr3t
